--- a/client/index.html
+++ b/client/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/gif" href="/favicon.gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/c1a23ee426.js" crossorigin="anonymous"></script>
-    <title>Vite + React</title>
+    <title>CodeNest</title>
   </head>
   <body>
     <div id="root"></div>
